Resolves: tdf#90141 layout crash with table in footnote

this also makes cloudon File_1308.docx not crash, which
is the last outstanding crashtesting import failure

Change-Id: I06867a1b06316c6dab62ebd8a55f3a02b57b9f31
(cherry picked from commit 971adcd9e19e0bcab5855aae9be58d2203b46169)